fix breadcrumb caret alignment on MS Edge

--- a/src-core/src/components/breadcrumb-item/breadcrumb-item.scss
+++ b/src-core/src/components/breadcrumb-item/breadcrumb-item.scss
@@ -37,11 +37,4 @@
       color: $se-light-grey;
     }
   }
-  // Align caret on MS Edge browser.
-  // Will remove when Chromium-based Edge browser is released.
-  @supports (-ms-ime-align:auto) {
-    se-icon {
-      top: -2px;
-    }
-  }
 }
