--- a/src-core/src/components/list-group/list-group.scss
+++ b/src-core/src/components/list-group/list-group.scss
@@ -24,7 +24,6 @@
   &.treeview {
     button {
       flex-direction: row-reverse;
-      height: 32px;
       padding: 5.5px 0;
       .nav-icon {
         margin: -3px -8px -3px 4px;
